# WIRE_COM_SETUP

./: .gitignore  README.md  read_uart_communication.py  token.txt  write_uart_communication.py
cpp_code/: CMakeLists.txt
cpp_code/include/: lib.h
cpp_code/software/: main.cpp
cpp_code/src/: lib.cpp
python_code/: read_uart_communication.py  write_uart_communication.py
